# docker-telegram-notifier

./: .gitignore  2  compose.yaml  justfile  pyproject.toml
app/core/: app.py  engine.py  logging.py  settings.py
app/core/constants/: log_constants.py
app/models/: __init__.py  log_models.py
app/repositories/: __init__.py  log_repository.py
app/routes/: __init__.py  react.py
app/routes/api/: __init__.py  dashboard_routes.py  log_routes.py
app/routes/common/: error_handlers.py
app/routes/dependencies/: session_dependency.py
app/services/: __init__.py  log_service.py
app/services/log/: __init__.py  log_service.py
dash_log_handler/: README.md  pyproject.toml
dash_log_handler/src/dash_log_handler/: __init__.py  handler.py
dash_log_handler/tests/: test_handler.py
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: logs.ts  types.ts
frontend/src/components/: Navbar.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/pages/: Dashboard.tsx  Logs.tsx
migrations/: env.py
migrations/versions/: 68186bacdc5a_add_created_at.py  73f5227014be_add_logger_to_log.py  9a44cce26de8_init_db.py
scripts/: load_fixtures.py
