[project]
name = "docker-telegram-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "niquests>=3.18.6",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
]

[tool.fastapi]
entrypoint = "app.core.app:create_app"
