[project]
name = "docker-telegram-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dash-log-handler",
    "fastapi[standard]>=0.136.0",
    "niquests>=3.18.6",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "sqlmodel>=0.0.38",
]

[tool.fastapi]
entrypoint = "app.core.app:create_app"

[tool.uv.workspace]
members = [
    "dash_log_handler",
]

[tool.uv.sources]
dash-log-handler = { workspace = true, editable = true }
